Description claire de tes modifications

--- a/frontend/dashboardAdmin.html
+++ b/frontend/dashboardAdmin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tableau de Bord Admin - SNT AFRIC</title>
-    <link rel="stylesheet" href="../frontend/css/dashboard.css">
+    <link rel="stylesheet" href="./css/dashboard.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         /* Styles supplémentaires pour l'interface admin */
@@ -82,9 +82,9 @@
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="sidebar-header">
-                <img src="../frontend/images/icons/veri.png" alt="SNT AFRIC" class="logo">
+                <img src="./images/icons/veri.png" alt="SNT AFRIC" class="logo">
                 <div class="user-info">
-                    <img src="../frontend/images/directeur_snt.jpg" alt="Avatar" class="user-avatar">
+                    <img src="./images/directeur_snt.jpg" alt="Avatar" class="user-avatar">
                     <span class="user-name">Admin</span>
                     <span class="user-role">Administrateur</span>
                 </div>
