--- a/frontend/dashboardClient.html
+++ b/frontend/dashboardClient.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tableau de Bord Client - SNT AFRIC</title>
     <link rel="stylesheet" href="">
-    <link rel="stylesheet" href="../frontend/css/dashboard.css">
+    <link rel="stylesheet" href="./css/dashboard.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -13,9 +13,9 @@
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="sidebar-header">
-                <img src="../frontend/images/icons/veri.png" alt="SNT AFRIC" class="logo">
+                <img src="./images/icons/veri.png" alt="SNT AFRIC" class="logo">
                 <div class="user-info">
-                    <img src="../frontend/images/avatar.jpg" alt="Avatar" class="user-avatar">
+                    <img src="./images/avatar.jpg" alt="Avatar" class="user-avatar">
                     <span class="user-name">John Doe</span>
                     <span class="user-role">Client</span>
                 </div>
@@ -176,7 +176,7 @@
                 <div class="profile-container">
                     <div class="profile-header">
                         <div class="profile-avatar">
-                            <img src="../frontend/images/avatar.jpg" alt="Profile Photo">
+                            <img src="./images/avatar.jpg" alt="Profile Photo">
                         </div>
                         <div class="profile-info">
                             <h2 id="profile-name">John Doe</h2>
