--- a/frontend/dashboardTechnicien.html
+++ b/frontend/dashboardTechnicien.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tableau de Bord Technicien - SNT AFRIC</title>
-    <link rel="stylesheet" href="../frontend/css/dashboard.css">
+    <link rel="stylesheet" href="./css/dashboard.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         /* Ajout de styles pour les badges de priorité */
@@ -42,9 +42,9 @@
         <!-- Sidebar -->
         <aside class="sidebar">
             <div class="sidebar-header">
-                <img src="../frontend/images/icons/veri.png" alt="SNT AFRIC" class="logo">
+                <img src="./images/icons/veri.png" alt="SNT AFRIC" class="logo">
                 <div class="user-info">
-                    <img src="../frontend/images/photo_chaka.jpg" alt="Avatar" class="user-avatar">
+                    <img src="./images/photo_chaka.jpg" alt="Avatar" class="user-avatar">
                     <span class="user-name">Technicien Chaka</span>
                     <span class="user-role">Technicien</span>
                 </div>
@@ -291,7 +291,7 @@
                 <div class="profile-container">
                     <div class="profile-header">
                         <div class="profile-avatar">
-                            <img src="../frontend/images/photo_chaka.jpg" alt="Profile Photo">
+                            <img src="./images/photo_chaka.jpg" alt="Profile Photo">
                             <button class="btn btn-secondary">Changer la photo</button>
                         </div>
                         <div class="profile-info">
