--- a/frontend/pages/admin/admin_dashboard.html
+++ b/frontend/pages/admin/admin_dashboard.html
@@ -24,7 +24,7 @@
                 return;
             }
 
-            const response = await fetch('http://localhost:5000/api/admin/demands', {
+            const response = await fetch('https://snt-backend-9hhe.onrender.com/api/admin/demands', {
                 method: 'GET',
                 headers: {
                     'Authorization': `Bearer ${token}`
@@ -36,7 +36,7 @@
             const technicienId = prompt('Entrez l\'ID du technicien à assigner:');
             const token = localStorage.getItem('token');
 
-            const response = await fetch('http://localhost:5000/api/admin/assign', {
+            const response = await fetch('https://snt-backend-9hhe.onrender.com/api/admin/assign', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
