--- a/frontend/pages/admin/manage_demands.html
+++ b/frontend/pages/admin/manage_demands.html
@@ -127,7 +127,7 @@
       const token = localStorage.getItem('token');
       if (!token) return window.location.href = '../client/login.html';
 
-      const res = await fetch('http://localhost:5000/api/admin/demands', {
+      const res = await fetch('/api/admin/demands', {
         headers:{ 'Authorization':`Bearer ${token}` }
       });
       const demands = await res.json();
@@ -157,7 +157,7 @@
     async function assignTechnician(id) {
       const tech = prompt('ID du technicien ?');
       const token = localStorage.getItem('token');
-      const res = await fetch('http://localhost:5000/api/admin/assign',{
+      const res = await fetch('/api/admin/assign', {
         method:'POST',
         headers:{
           'Content-Type':'application/json',
@@ -173,7 +173,7 @@
     async function deleteDemand(id) {
       if (!confirm("Voulez-vous vraiment supprimer cette demande ?")) return;
       const token = localStorage.getItem('token');
-      const res = await fetch(`http://localhost:5000/api/admin/demands/${id}`, {
+      const res = await fetch(`/api/admin/demands/${id}`, {
         method: 'DELETE',
         headers: { 'Authorization': `Bearer ${token}` }
       });
@@ -186,7 +186,7 @@
       const nouveauStatut = prompt("Entrez le nouveau statut (ex: en cours, terminé...)");
       if (!nouveauStatut) return;
       const token = localStorage.getItem('token');
-      const res = await fetch(`http://localhost:5000/api/admin/demands/${id}`, {
+      const res = await fetch(`/api/admin/demands/${id}`, {
         method: 'PUT',
         headers: {
           'Content-Type': 'application/json',
@@ -202,7 +202,7 @@
     async function archiveDemand(id) {
       if (!confirm("Archiver cette demande ?")) return;
       const token = localStorage.getItem('token');
-      const res = await fetch(`http://localhost:5000/api/admin/demands/${id}/archive`, {
+      const res = await fetch(`/api/admin/demands/${id}/archive`, {
         method: 'PUT',
         headers: {
           'Content-Type': 'application/json',
@@ -215,16 +215,14 @@
       else alert(data.message || "Erreur lors de l'archivage.");
     }
 
-    // Gérer l'affichage des demandes archivées
     document.getElementById('toggleArchivedBtn').addEventListener('click', async () => {
       const container = document.getElementById('archivedContainer');
       const tbody = document.querySelector('#archivedTable tbody');
       const btn = document.getElementById('toggleArchivedBtn');
 
       if (container.style.display === 'none') {
-        // Charger les archivées
         const token = localStorage.getItem('token');
-        const res = await fetch('http://localhost:5000/api/admin/demands/archives', {
+        const res = await fetch('/api/admin/demands/archives', {
           headers: { 'Authorization': `Bearer ${token}` }
         });
         const archives = await res.json();
