--- a/frontend/pages/client/demande_fibre.html
+++ b/frontend/pages/client/demande_fibre.html
@@ -5,31 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demande Fibre Optique - SNT AFRIC</title>
     <link rel="stylesheet" href="../../css/styles.css">
-    <style>
-        
-    </style>
 </head>
 <body>
     <div class="container">
         <h2>Demande Fibre Optique</h2>
         <form id="demandeFibreForm">
             <div class="form-group">
-                <label for="type_demande">Type de demande :</label>
+                <label for="type_demande">Type de demande:</label>
                 <select id="type_demande" name="type_demande" required>
                     <option value="installation">Installation</option>
                     <option value="maintenance">Maintenance</option>
                 </select>
             </div>
             <div class="form-group">
-                <label for="adresse">Adresse :</label>
+                <label for="adresse">Adresse:</label>
                 <input type="text" id="adresse" name="adresse" required>
             </div>
             <div class="form-group">
-                <label for="disponibilite">Disponibilité :</label>
+                <label for="disponibilite">Disponibilité:</label>
                 <input type="date" id="disponibilite" name="disponibilite" required>
             </div>
             <div class="form-group">
-                <label for="creneau_horaire">Créneau horaire :</label>
+                <label for="creneau_horaire">Créneau horaire:</label>
                 <select id="creneau_horaire" name="creneau_horaire" required>
                     <option value="matin">Matin</option>
                     <option value="apres-midi">Après-midi</option>
@@ -38,13 +35,13 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="details">Détails :</label>
+                <label for="details">Détails:</label>
                 <textarea id="details" name="details" required></textarea>
             </div>
             <button type="submit">Soumettre la demande</button>
         </form>
 
-        <div id="messageInfo">
+        <div id="messageInfo" style="display: none;">
             <h3>📢 Demande enregistrée avec succès</h3>
             <p>Votre demande a bien été prise en compte.</p>
             <p><strong>Veuillez contacter votre fournisseur d’accès Internet</strong> pour finaliser la commande.</p>
@@ -54,25 +51,28 @@
     </div>
 
     <script>
-        document.getElementById('demandeFibreForm').addEventListener('submit', async function (e) {
+        document.getElementById('demandeFibreForm').addEventListener('submit', async (e) => {
             e.preventDefault();
 
+            // Vérification de l'authentification
             const token = localStorage.getItem('token');
             if (!token) {
-                alert("Vous devez être connecté pour soumettre une demande.");
+                alert('Vous devez être connecté pour soumettre une demande');
                 window.location.href = 'login.html';
                 return;
             }
 
+            // Récupération des données du formulaire
             const typeDemande = document.getElementById('type_demande').value;
             const adresse = document.getElementById('adresse').value;
             const disponibilite = document.getElementById('disponibilite').value;
             const creneauHoraire = document.getElementById('creneau_horaire').value;
             const details = document.getElementById('details').value;
-            const serviceId = 1; // Fibre Optique
+            const serviceId = 1; // ID du service Fibre Optique
 
             try {
-                const response = await fetch('http://localhost:5000/api/demandes', {
+                // Envoi de la demande au backend déployé
+                const response = await fetch('https://snt-backend-9hhe.onrender.com/api/demandes', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -88,24 +88,37 @@
                     })
                 });
 
-                const data = await response.json();
-
-                if (response.ok) {
-                    document.getElementById('demandeFibreForm').reset();
-                    document.getElementById('demandeFibreForm').style.display = "none";
-                    document.getElementById('messageInfo').style.display = "block";
-                } else {
-                    alert(data.message || "Une erreur est survenue.");
+                // Vérification de la réponse
+                if (!response.ok) {
+                    const errorData = await response.json();
+                    throw new Error(errorData.message || "Erreur lors de la soumission de la demande");
                 }
+
+                const data = await response.json();
+                console.log("Demande fibre réussie:", data);
+
+                // Affichage du message de confirmation
+                document.getElementById('demandeFibreForm').reset();
+                document.getElementById('demandeFibreForm').style.display = "none";
+                document.getElementById('messageInfo').style.display = "block";
+
             } catch (error) {
-                alert("Erreur de connexion au serveur.");
-                console.error(error);
+                console.error("Erreur lors de la soumission:", error);
+
+                // Gestion spécifique des erreurs d'authentification
+                if (error.message.includes('token') || error.message.includes('authentification')) {
+                    localStorage.removeItem('token');
+                    alert('Session expirée. Veuillez vous reconnecter.');
+                    window.location.href = 'login.html';
+                } else {
+                    alert(error.message || "Une erreur est survenue lors de la soumission de votre demande");
+                }
             }
         });
 
-        // Action bouton OK
-        document.getElementById('btnAccueil').addEventListener('click', function () {
-            window.location.href = 'client_dashboard.html'; 
+        // Redirection après confirmation
+        document.getElementById('btnAccueil').addEventListener('click', () => {
+            window.location.href = 'client_dashboard.html';
         });
     </script>
 </body>
