--- a/frontend/pages/client/login.html
+++ b/frontend/pages/client/login.html
@@ -31,29 +31,42 @@
             const email = document.getElementById('email').value;
             const password = document.getElementById('password').value;
 
-            const response = await fetch('http://localhost:5000/api/auth/login', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ email, password })
-            });
+            try {
+                // URL corrigée pour pointer vers le backend déployé
+                const response = await fetch('https://snt-backend-9hhe.onrender.com/api/auth/login', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ email, password })
+                });
 
-            const data = await response.json();
-            console.log(data); // Ajoute ce log pour vérifier la réponse
+                // Debug: Affiche la réponse brute dans la console
+                console.log("Réponse du serveur:", response);
 
-            if (response.ok) {
-                localStorage.setItem('token', data.token);
-                const niveauAcces = data.niveauAcces;
-                if (niveauAcces === 'admin') {
-                    window.location.href = '../admin/admin_dashboard.html';
-                } else if (niveauAcces === 'technicien') {
-                    window.location.href = '../technician/technician_dashboard.html';
-                } else {
-                    window.location.href = 'client_dashboard.html';
+                if (!response.ok) {
+                    const errorData = await response.json();
+                    throw new Error(errorData.message || "Échec de la connexion");
                 }
-            } else {
-                alert(data.message);
+
+                const data = await response.json();
+                console.log("Données reçues:", data); // Debug
+
+                // Stockage du token et redirection
+                localStorage.setItem('token', data.token);
+                switch (data.niveauAcces) {
+                    case 'admin':
+                        window.location.href = '../admin/admin_dashboard.html';
+                        break;
+                    case 'technicien':
+                        window.location.href = '../technician/technician_dashboard.html';
+                        break;
+                    default:
+                        window.location.href = 'client_dashboard.html';
+                }
+            } catch (error) {
+                console.error("Erreur lors de la connexion:", error);
+                alert(error.message || "Erreur réseau. Vérifiez la console (F12) pour plus de détails.");
             }
         });
     </script>
