--- a/frontend/pages/technician/assigned_demands.html
+++ b/frontend/pages/technician/assigned_demands.html
@@ -69,7 +69,7 @@
       const token = localStorage.getItem('token');
       if (!token) return window.location.href = '../client/login.html';
 
-      const res = await fetch('http://localhost:5000/api/technician/demands', {
+      const res = await fetch('https://snt-backend-9hhe.onrender.com/api/technician/demands', {
         headers: { 'Authorization': `Bearer ${token}` }
       });
 
