--- a/frontend/pages/technician/technician_dashboard.html
+++ b/frontend/pages/technician/technician_dashboard.html
@@ -14,7 +14,6 @@
                 <li><a href="assigned_demands.html">Demandes Assignées</a></li>
             </ul>
         </nav>
-       
 
     <script>
         document.addEventListener('DOMContentLoaded', async () => {
@@ -24,7 +23,7 @@
                 return;
             }
 
-            const response = await fetch('http://localhost:5000/api/technician/demands', {
+            const response = await fetch('https://snt-backend-9hhe.onrender.com/api/technician/demands', {
                 method: 'GET',
                 headers: {
                     'Authorization': `Bearer ${token}`
